tests/error/preprocessor_unclosed_if.vbc
#ifdef NEVER_CLOSED

int main() {
    return 0;
}
